<resources>
    <string name="app_name">Farm Animal Life</string>

    <string name="weight">Weight:</string>
    <string name="weightAndKg">Weight: %d kg</string>
    <string name="weightOnlyKg">%d</string>
    <string name="weightIs">Pig weight is: %d kg</string>
    <string name="weightIsNewLine">Pig weight is:\n %d kg</string>
    <string name="weightNumAndKg">%d kg</string>


    <string name="idAndID">ID: %d</string>
    <string name="FatherIDNum">Father ID: %d</string>
    <string name="MotherIDNum">Mother ID: %d</string>
    <string name="FatherID">Father ID:</string>
    <string name="MotherID">Mother ID:</string>

    <string name="DateOfBirthNum">Date of birth: %s</string>
    <string name="DateOfBirth">Date of birth:</string>

    <string name="gender">Gender :</string>

    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="feedAndFeedName">Feed: %s</string>
    <string name="feed">Feed:</string>


    <string name="pregNo">Pregnant: NO</string>
    <string name="pregYes">Pregnant: YES</string>
    <string name="pregnant">Pregnant:</string>


    <string name="succPreg">Succesful pregnancies (%)</string>
    <string name="succPregNum">%.0f</string>
    <string name="succPregNumL">Succesful pregnancies: %.0f </string>
    <string name="preg">Pregnancies:</string>

    <string name="numOfBirths">Number of births:</string>
    <string name="numOfBirthsNum">%d</string>
    <string name="numOfBirthsNumLInt">Number of births: %d</string>
    <string name="numOfBirthsNumLDoub">Number of births: %.0f</string>

    <string name="mortRatePrc">Mortality rate (%)</string>
    <string name="mortRateNum">%.0f</string>
    <string name="mortRateNumPrec">Mortality rate: %.0f</string>
    <string name="mortRate">Mortality rate:</string>

    <string name="pigPerBir">Piglets/Pregnancy:</string>
    <string name="pigPerBirNum">%.1f</string>
    <string name="pigPerBirNumInt">%d</string>
    <string name="pigPerBirNumL">Piglets/Pregnancy: %.1f</string>
    <string name="pigPerBirNumLInt">Piglets/Pregnancy: %d</string>

    <string name="alertDiaSaveCh">Do you want to save the changes?</string>
    <string name="alertDeletePig">Delete the pig with ID number: %d</string>

    <string name="toastFill">Fill all the fields</string>
    <string name="toastHigherWeight">Wanted weight must be higher than actual weight!</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="perc">%</string>
    <string name="addNewPig">ADD A NEW PIG</string>
    <string name="calculate">CALCULATE</string>


</resources>
