<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="53dp"
            android:text="@string/weight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/pig_weight"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="8dp" />

        <RadioGroup
            android:id="@+id/radio_grp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="71dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/pig_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male"/>

            <RadioButton
                android:id="@+id/pig_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female"/>

        </RadioGroup>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="47dp"
            android:text="@string/gender"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/radio_grp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="8dp" />

        <EditText
            android:id="@+id/pig_weight"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_grp" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MotherID"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView18"
            android:layout_marginLeft="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintRight_toLeftOf="@+id/spinnerMother"
            android:layout_marginRight="0dp"
            app:layout_constraintHorizontal_bias="0.0"
            />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:text="@string/FatherID"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintRight_toLeftOf="@+id/spinnerFather"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Spinner
            android:id="@+id/spinnerFather"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Spinner
            android:id="@+id/spinnerMother"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="80dp"
            android:layout_marginTop="24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerFather" />

        <Button
            android:id="@+id/add_finished_pig"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            android:onClick="addNewPig"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerMother"
            app:layout_constraintHorizontal_bias="0.501"
            android:text="@string/addNewPig"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            android:onClick="showDatePickerDialog"
            android:text="@string/DateOfBirth"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pig_weight" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>